# animalfmritools

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.jupyter  Pipfile  build_singularity.sh  docker-compose.yml  pyproject.toml  run_notebook.sh
.dvc/: config
animalfmritools/: .gitignore  data.dvc  data_template.dvc
animalfmritools/cli/: base_utils.py  parser.py  run.py  workflow_utils.py
animalfmritools/data_template/MouseABA/: .gitignore  TMBTA_space-P56_downsample2.nii.gz.dvc
animalfmritools/interfaces/: acompcor.py  ants_reg.py  apply_bold_to_anat.py  copy_aff_hdr_nifti.py  evenify_nifti.py  flip_nifti.py  fsl_topup.py  functions.py  itk_to_fsl.py  rescale_nifti.py  workbench.py
animalfmritools/tests/: test_addition.py
animalfmritools/utils/: data_grabber.py
animalfmritools/workflows/anat/: regrid.py
animalfmritools/workflows/bold/: boldref.py  confounds.py  hmc.py  sdc.py  surface_mapping.py
animalfmritools/workflows/derivatives/: base_outputs.py  outputs.py
animalfmritools/workflows/registration/: apply.py  transforms.py  utils.py
docker/files/: freesurfer7.4.1-exclude.txt
docker/palmstandaloneApplication/: readme.txt  requiredMCRProducts.txt  run_palm.sh
notebooks/: A_denoise_preprocessed_data.ipynb  B_calculate_connectivity_matrix.ipynb  denoising_with_confounds.ipynb  mouse_template.ipynb  run.ipynb  test_run.ipynb
notebooks/CC/: Untitled.ipynb
notebooks/local/: 0_mouseABA_template_handler.ipynb  0_preproc.ipynb  2_calculate_metrics.ipynb  TEST_surface_projections.ipynb
(+9 files in other folders)
