[project]
name = "animalfmritools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nipype>=1.10.0",
    "niworkflows>=1.13.3",
    "pydantic>=2.11.4",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.10",
]
